[package]
name = "rocks"
version = "0.1.5"
authors = ["BH1XUW <bh1xuw@gmail.com>"]
description = "RocksDB bindings for Rust."
repository = "https://github.com/bh1xuw/rust-rocks"
keywords = ["ffi", "RocksDB", "facebook", "database"]
categories = ["external-ffi-bindings", "database"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
include = ["src/*.rs", "Cargo.toml"]

[badges]
travis-ci = { repository = "bh1xuw/rust-rocks", branch = "master" }

[dependencies]
lazy_static = "1.4"
rocks-sys = { path = "rocks-sys", version = "0.1.5", default-features = false }

[dev-dependencies]
tempdir = "0.3"
lazy_static = "1"

[features]
default = ["rocks-sys/default", "rocks-sys/snappy"]
static-link = ["rocks-sys/static-link", "rocks-sys/snappy"]
full = ["rocks-sys/static-link-all"]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[package.metadata.docs.rs]
features = ["static-link"]

[workspace]
members = ["rocks-sys"]
