[package]
name = "rocks"
version = "0.1.10"
authors = ["BH1XUW <bh1xuw@gmail.com>"]
description = "RocksDB bindings for Rust."
keywords = ["ffi", "RocksDB", "facebook", "database"]
categories = ["external-ffi-bindings", "database"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
homepage = "https://github.com/bh1xuw/rust-rocks"
repository = "https://github.com/bh1xuw/rust-rocks"
documentation = "https://docs.rs/rocks"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[badges]
maintenance = { status = "actively-developed" }
appveyor = { repository = "bh1xuw/rust-rocks", branch = "master" }
travis-ci = { repository = "bh1xuw/rust-rocks", branch = "master" }

[dependencies]
lazy_static = "1.4"
rocks-sys = { path = "rocks-sys", version = "0.1.9", default-features = false }

[dev-dependencies]
tempdir = "0.3"

[features]
default = ["rocks-sys/default"]
static-link = ["rocks-sys/static-link"]
full = ["rocks-sys/static-link-all"]
snappy = ["rocks-sys/snappy"]
zlib = ["rocks-sys/zlib"]
bzip2 = ["rocks-sys/bzip2"]
lz4 = ["rocks-sys/lz4"]
zstd = ["rocks-sys/zstd"]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[package.metadata.docs.rs]
features = ["static-link"]

[workspace]
members = ["rocks-sys"]
