[package]
name = "rocks-sys"
version = "0.1.1"
authors = ["BH1XUW <bh1xuw@gmail.com>"]
description = "Raw RocksDB bindings for Rust, used internally in rust-rocks"
repository = "https://github.com/bh1xuw/rust-rocks"
keywords = ["ffi", "RocksDB", "facebook", "database"]
categories = ["external-ffi-bindings", "database"]
license = "Apache-2.0"
build = "build.rs"

[dependencies]

[features]
default = []
static-link = []
snappy = []
zlib = []
bzip2 = []
lz4 = []
zstd = []

[build-dependencies]
gcc = "0.3"
pkg-config = "0.3"
cmake = "0.1"
