[package]
name = "rocks-sys"
version = "0.1.4"
authors = ["BH1XUW <bh1xuw@gmail.com>"]
description = "Raw RocksDB bindings for Rust, used internally in rust-rocks"
repository = "https://github.com/bh1xuw/rust-rocks"
keywords = ["ffi", "RocksDB", "facebook", "database"]
categories = ["external-ffi-bindings", "database"]
license = "Apache-2.0"
edition = "2018"
build = "build.rs"
exclude = [
    "rocksdb/docs",
    "rocksdb/java",
    "zlib/contrib",
    "snappy/testdata",
    "zstd/contrib",
    "zstd/tests",
    "zstd/programs"
]

[dependencies]

[features]
default = ["snappy"]
static-link = ["snappy"]
static-link-all = ["static-link", "snappy", "zlib", "bzip2", "lz4", "zstd"]
snappy = []
zlib = []
bzip2 = []
lz4 = []
zstd = []

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
cmake = "0.1.42"

[package.metadata.docs.rs]
features = ["static-link"]
